// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber renders correctly 1`] = `
<input
  class="kd-input kd-input-size-middle kd-input-underline kd-inputNumber"
  type="text"
  value=""
/>
`;

exports[`InputNumber renders correctly 2`] = `
<input
  class="kd-input kd-input-size-large kd-input-underline kd-inputNumber"
  type="text"
  value=""
/>
`;

exports[`InputNumber renders correctly 3`] = `
<input
  class="kd-input kd-input-size-middle kd-input-underline kd-inputNumber"
  type="text"
  value=""
/>
`;

exports[`InputNumber renders correctly 4`] = `
<input
  class="kd-input kd-input-size-small kd-input-underline kd-inputNumber"
  type="text"
  value=""
/>
`;
